--- a/calc.html
+++ b/calc.html
@@ -226,7 +226,7 @@
             template: '#template1',
             data: {
                 self: this,
-                server: 'http://127.0.0.1:8080',
+                server: 'https://diabetes-20200426.azurewebsites.net',
                 video: '',
                 screenHeight: 0,
                 isUp: true,
