--- a/calc.html
+++ b/calc.html
@@ -190,7 +190,7 @@
                                              :no-data-text="noDataText"></i-table>
                                 </i-col>
                             </Row>
-                            <Row style="text-align: center;margin-top: 30px;" v-show="calcResult.output >= 25">
+                            <!--<Row style="text-align: center;margin-top: 30px;" v-show="calcResult.output >= 25">
                                 <i-col span="16" offset="4">
                                     <img src="css/images/img10.png" height="64" width="64" alt=""/>
                                     <span style="line-height: 30px;font-size: 30px;font-weight: 900;">Caution! You need to limit your calorie intake. These foods are too</span>
@@ -207,7 +207,7 @@
                                         </li>
                                     </ul>
                                 </i-col>
-                            </Row>
+                            </Row>-->
                         </div>
                     </div>
                 </div>
