--- a/calc.html
+++ b/calc.html
@@ -58,7 +58,7 @@
                     <a href="#"><img src="css/images/logo.png" alt="" style="width: 64px;height: 64px;"/></a>
                     <ul class="nav">
                         <li><a href="index.html">HOME</a></li>
-                        <li class="cur"><a href="#">CALCULATE</a></li>
+                        <li class="cur"><a href="#">CALORIE CONTROL</a></li>
                         <li><a href="about.html">ABOUT DIABETES</a></li>
                     </ul>
                 </div>
