--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="#"><img class="logo" src="css/images/logo.png" alt=""/></a>
                     <ul class="nav">
                         <li class="cur"><a href="#">HOME</a></li>
-                        <li><a href="calc.html">CALCULATE</a></li>
+                        <li><a href="calc.html">CALORIE CONTROL</a></li>
                         <li><a href="about.html">ABOUT DIABETES</a></li>
                     </ul>
                     <i :class="['iconfont', 'icon-below-s', 'arrow', {up: isUp}]" @click="changeUp"></i>
