--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <blockquote>
                         <h4><span class="--mb--rich-text" style="background-color: #339966;color: #ffffff;"
                                   data-boldtype="0">
-                        This website providing diet advice for elderly TypeII diabetes </span></h4>
+                        This website providing diet advice for elderly Type2 diabetes </span></h4>
                     </blockquote>
                 </div>
             </div>
@@ -44,7 +44,7 @@
             <div class="index" :style="{'min-height': (screenHeight - 110) + 'px'}">
                 <div class="index-heading-section">
                     <h1>Welcome</h1>
-                    <h1>To DDA</h1>
+                    <h1>to DDA</h1>
                     <p class="p index-p">
                         Our team mainly focuses on the current situation of elderly diabetic patients in
                         Australia.
