--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </header>
             <div class="index" :style="{'min-height': (screenHeight - 110) + 'px'}">
                 <div class="index-heading-section">
-                    <h1>Welcome</h1>
-                    <h1> to DDA</h1>
+                    <h1>WELCOME</h1>
+                    <h1>to DDA</h1>
                     <p class="p index-p">
                         Our team mainly focuses on the current situation of elderly diabetic patients in
                         Australia.
