--- a/about.html
+++ b/about.html
@@ -45,33 +45,29 @@
                             class="--mb--rich-text" data-boldtype="0">This is a link to a test form to help the risk assessment of diabetics, it may help you assess the risk of type 2 diabetes in the next 5 years.</span>
                     </p>
                     <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <a href="#"><img class="icon--rongzijine" src="css/images/icon2.png" width="100" height="100" alt=""
-                                     style="display: block; margin-left: auto; margin-right: auto;"/></a>
-                    <h4 style="text-align: center;"><strong><span class="--mb--rich-text" data-boldtype="0">Exercise Treatment of Type 2 Diabetes</span></strong>
-                    </h4>
-                    <p><span class="--mb--rich-text" data-boldtype="0">1. At least 3-5 exercises(30-45 minutes) per week, moderate endurance training.</span>
-                    </p>
-                    <p><span class="--mb--rich-text" data-boldtype="0">2. In daily life, try to increase activity time and methods</span>
-                    </p>
-                    <p><span class="--mb--rich-text"
-                             data-boldtype="0">3. Regular exercise to help stabilize blood sugar</span></p>
-                    <p><span class="--mb--rich-text" data-boldtype="0">4. The goal is to achieve a cumulative weekly calorie consumption of 1,000 calories. After adapting, try to add resistance training to increase the stability of blood sugar and blood pressure.</span>
-                    </p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <p>&nbsp;</p>
-                    <a href="#"><img class="icon--rongzijine" src="css/images/icon1.png" width="100" height="100" alt=""
-                                     style="display: block; margin-left: auto; margin-right: auto;"/></a>
-                    <h4 style="text-align: center;"><strong><span class="--mb--rich-text" data-boldtype="0">Medical Treatment of Type 2 Diabetes</span></strong>
-                    </h4>
+                  <div class="con">
+                <div class="heading-section" style="padding: 50px 0;">
+                   <h2 style="color: #339966;">About Diabetes</h2>
+                       <div class="aboutus" style="text-align: justify;">&nbsp; &nbsp;
+                        <span style="text-align: justify;">Type 2 diabetes is a progressive disease in which the body develops resistance to&nbsp;</span>
+                        <span class="--mb--rich-text" data-boldtype="0">the normal action of insulin and gradually loses the ability to produce sufficient insulin </span>
+                        <span class="--mb--rich-text" data-boldtype="0">in the pancreas. It is not known what causes type 2 diabetes, it may be related to lifestyle and genetics.</span></div>
+                       <div class="aboutus">
+                    <p><a href="https://www1.health.gov.au/internet/main/publishing.nsf/Content/diabetesRiskAssessmentTool"><span style="text-decoration: underline; color: #3366ff;"><strong><span class="--mb--rich-text" data-boldtype="0">Diabetes Risk Assessment Tool&nbsp;</span></strong></span></a><span class="--mb--rich-text" data-boldtype="0">This is a link to a test form to help the risk assessment of diabetics, it may help you assess the risk of type 2 diabetes in the next 5 years.</span></p>
+                    <a href="#"><img class="icon--rongzijine" src="css/images/icon2.png" width="100" height="100"alt="" style="display: block; margin-left: auto; margin-right: auto;"/></a>
+                    <h4 style="text-align: center;"><strong><span class="--mb--rich-text" data-boldtype="0">Exercise Treatment of Type 2 Diabetes</span></strong></h4>
+                    <p><span class="--mb--rich-text" data-boldtype="0">1. At least 3-5 exercises(30-45 minutes) per week, moderate endurance training.</span></p>
+                    <p><span class="--mb--rich-text" data-boldtype="0">2. In daily life, try to increase activity time and methods</span></p>
+                    <p><span class="--mb--rich-text" data-boldtype="0">3. Regular exercise to help stabilize blood sugar</span></p>
+                    <p><span class="--mb--rich-text" data-boldtype="0">4. The goal is to achieve a cumulative weekly calorie consumption of 1,000 calories. After adapting, try to add resistance training to increase the stability of blood sugar and blood pressure.</span></p>
+                    <a href="#"><img class="icon--rongzijine" src="css/images/icon1.png" width="100" height="100"alt=""style="display: block; margin-left: auto; margin-right: auto;"/></a>
+                    <h4 style="text-align: center;"><strong><span class="--mb--rich-text" data-boldtype="0">Medical Treatment of Type 2 Diabetes</span></strong></h4>
                     <p><span class="--mb--rich-text" data-boldtype="0">1. Oral medicine</span></p>
                     <p><span class="--mb--rich-text" data-boldtype="0">2. Insulin</span></p>
                     <p><span class="--mb--rich-text" data-boldtype="0">3. Other medicine</span></p>
-                    <p><span class="--mb--rich-text" style="color: #ff0000;" data-boldtype="0">*Everyone's diabetes management methods and drug use methods are different, so let your diabetes health experts help you determine the best treatment for you.*</span>
-                    </p>
+                    <p><span class="--mb--rich-text" style="color: #ff0000;" data-boldtype="0">*Everyone's diabetes management methods and drug use methods are different, so let your diabetes health experts help you determine the best treatment for you.*</span></p>
                     <p>&nbsp;</p>
+                       </div>
                 </div>
             </div>
         </div>
