--- a/about.html
+++ b/about.html
@@ -28,9 +28,8 @@
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
-            <iframe src="https://www.youtube.com/embed/AM5MgWN5C8c" width="760" height="450" frameborder="0"
-                    allowfullscreen="allowfullscreen" style="display: block; margin: auto;" width="560"></iframe>
-                  <div class="con">
+            <iframe src="https://www.youtube.com/embed/AM5MgWN5C8c" width="760" height="450" frameborder="0" allowfullscreen="allowfullscreen" style="display: block; margin: auto;" width="560"></iframe>
+            <div class="con">
                 <div class="heading-section" style="padding: 50px 0;">
                    <h2 style="color: #339966;">About Diabetes</h2>
                        <div class="aboutus" style="text-align: justify;">&nbsp; &nbsp;
