--- a/index.html
+++ b/index.html
@@ -45,16 +45,13 @@
                 <div class="index-heading-section">
                     <h1>WELCOME</h1>
                     <p class="p index-p">
-                        Our team mainly focuses on the current situation of elderly diabetic patients in
-                        Australia.
+                        If you visit this site, there is a high level of possibility you need some bits of advice about a dietary plan for diabetes type2.
                     </p>
                     <p class="p index-p">
-                        The website would offer senior people to develop a healthy diet by establishing a
-                        network platform to remind harmful substances, identify nutritional content and health graded.
+                        Although this decease is very dangerous, still, you can live a normal life and eat a lot of different meals. You don't need to limit yourself strictly! Believe me, it's never late to eat healthy and tasty food which would help you to maintain good health conditions.
                     </p>
                     <p class="p index-p">
-                        The long-term target of the website is to cultivate user have good diet habits from follow the
-                        diet recipe.
+                        Did you know, according to the Australian Institute of Health and Welfare, more than 15% of people at the age of 65 and above have been diagnosed with diabetes type II? And this number is increasing steadily but continuously. Our project is dedicated to helping you.
                     </p>
                 </div>
             </div>
