--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
             </video>
             <div class="title">
                 <div class="main-title">Diabetes Diet Advisor</div>
-                <div class="sub-title" style="">
-                    <blockquote>
-                        <h4><span class="--mb--rich-text" style="background-color: #339966;color: #ffffff;"
-                                  data-boldtype="0">
-                        The website providing diet advice for elderly Type2 diabetes </span></h4>
-                    </blockquote>
+                <div class="sub-title">
+                <blockquote>
+                    <h4><span class="--mb--rich-text" style="background-color: #339966;color: #ffffff;" data-boldtype="0">
+                        This website providing diet advice for elderly TypeII diabetes </span></h4>
+                </blockquote>
                 </div>
             </div>
         </div>
@@ -43,7 +42,7 @@
             </header>
             <div class="index" :style="{'min-height': (screenHeight - 110) + 'px'}">
                 <div class="index-heading-section">
-                    <h1>WELCOME</h1>
+                    <h1>Welcome</h1>
                     <p class="p index-p">
                         If you visit this site, there is a high level of possibility you need some bits of advice about a dietary plan for diabetes type2.
                     </p>
@@ -58,6 +57,7 @@
         </div>
     </div>
 </template>
+<script src="js/login.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/vue.min.js"></script>
 <script>
