--- a/index.html
+++ b/index.html
@@ -2,107 +2,171 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Diabetes</title>
-    <link type="text/css" rel="stylesheet" href="css/fonts/iconfont.css"/>
-    <link type="text/css" rel="stylesheet" href="css/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta name="description"
+          content="Aria is a business focused HTML landing page template built with Bootstrap to help you create lead generation websites for companies and their services.">
+    <meta name="author" content="Inovatik">
+
+    <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
+    <meta property="og:site_name" content=""/> <!-- website name -->
+    <meta property="og:site" content=""/> <!-- website link -->
+    <meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
+    <meta property="og:description" content=""/> <!-- description shown in the actual shared post -->
+    <meta property="og:image" content=""/> <!-- image link, make sure it's jpg -->
+    <meta property="og:url" content=""/> <!-- where do you want your post to link to -->
+    <meta property="og:type" content="article"/>
+
+    <!-- Website Title -->
+    <title>Diabetes Diet Advisor</title>
+
+    <!-- Styles -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext"
+          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext"
+          rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/fontawesome-all.css" rel="stylesheet">
+    <link href="css/swiper.css" rel="stylesheet">
+    <link href="css/magnific-popup.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/down.animation.css">
+
+    <!-- Favicon  -->
+    <link rel="icon" href="images/logo2.png">
 </head>
-<body>
-<div id="container"></div>
-<template id="template1">
-    <div class="main index_main">
-        <div id="scrollTopPos" class="scroll_top_pos"></div>
-        <div class="video_box">
-            <video ref="video" :style="videoStyle" class="video" muted loop autoplay mediatype="video"
-                   :src="video">
-            </video>
-            <div class="title">
-                <div class="main-title">Diabetes Diet Advisor</div>
-                <div class="sub-title">
-                <blockquote>
-                    <h4><span class="--mb--rich-text" style="background-color: #339966;color: #ffffff;" data-boldtype="0">
-                        This website providing diet advice for elderly TypeII diabetes </span></h4>
-                </blockquote>
-                </div>
+<body data-spy="scroll" data-target=".fixed-top">
+
+<!-- Preloader -->
+<div class="spinner-wrapper">
+    <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+    </div>
+</div>
+<!-- end of preloader -->
+
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
+
+    <!-- Image Logo -->
+    <a class="navbar-brand logo-image" href="index.html"><img src="images/logo1.png" alt="alternative"></a>
+
+    <!-- Mobile Menu Toggle Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-awesome fas fa-bars"></span>
+        <span class="navbar-toggler-awesome fas fa-times"></span>
+    </button>
+    <!-- end of mobile menu toggle button -->
+
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link page-scroll" href="#">HOME <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link page-scroll" href="calc.html">CALORIE CONTROL</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link page-scroll" href="recipe.html">RECIPE</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link page-scroll" href="map.html">DISCOVERY</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link page-scroll" href="about.html">ABOUT DIABETES</a>
+            </li>
+        </ul>
+    </div>
+</nav> <!-- end of navbar -->
+<!-- end of navbar -->
+
+
+<!-- Header -->
+<header id="header" class="header" style="height: 100%;">
+    <div class="header-content">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="text-container">
+                        <h1>We <span id="js-rotating">Are Diabetes Diet Advisors, Make a Health in Your Lives</span>
+                        </h1>
+                        <p class="p-heading p-large">We providing diet advice for elderly Type2 diabetes</p>
+                        <!-- <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a> -->
+                    </div>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+            <div class="up animated" id="scroll-down">
+                <img src="images/down.png" height="50" width="50" alt=""/>
             </div>
         </div>
-        <div :class="['con', {up: isUp}]"
-             :style="{'transform': 'translateY(' + (screenHeight - 110) + 'px)', 'min-height': (isUp ? screenHeight : (screenHeight - 110)) + 'px'}">
-            <header id="header">
-                <div class="header">
-                    <a href="#"><img class="logo" src="css/images/logo.png" alt=""/></a>
-                    <ul class="nav">
-                        <li class="cur"><a href="#">HOME</a></li>
-                        <li><a href="calc.html">CALORIE CONTROL</a></li>
-                        <li><a href="about.html">ABOUT DIABETES</a></li>
-                    </ul>
-                    <i :class="['iconfont', 'icon-below-s', 'arrow', {up: isUp}]" @click="changeUp"></i>
-                </div>
-            </header>
-            <div class="index" :style="{'min-height': (screenHeight - 110) + 'px'}">
-                <div class="index-heading-section">
-                    <h1>Welcome</h1>
-                    <p class="p index-p">
-                        If you visit this site, there is a high level of possibility you need some bits of advice about a dietary plan for diabetes type2.
+        <!-- end of container -->
+    </div> <!-- end of header-content -->
+</header> <!-- end of header -->
+<!-- end of header -->
+
+
+<!-- Intro -->
+<div id="intro" class="basic-1">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-5">
+                <div class="text-container">
+                    <div class="section-title">INTRO</div>
+                    <h2>Your Body Knows What It Needs.
+                        Now You Can too.</h2>
+                    <p>Get a personalized nutrition plan based on your self-reported test values. Our evidence-based recommendations look at your Physical condition level, age level, and personal wellness goal, to understand what your body needs.
                     </p>
-                    <p class="p index-p">
-                        Although this decease is very dangerous, still, you can live a normal life and eat a lot of different meals. You don't need to limit yourself strictly! Believe me, it's never late to eat healthy and tasty food which would help you to maintain good health conditions.
-                    </p>
-                    <p class="p index-p">
-                        Did you know, according to the Australian Institute of Health and Welfare, more than 15% of people at the age of 65 and above have been diagnosed with diabetes type II? And this number is increasing steadily but continuously. Our project is dedicated to helping you.
-                    </p>
-                </div>
+                    <p class="testimonial-text">Then, Learn how your handles calories, sugar, and more. Know right away where you’re doing well and where you have opportunities to optimize your health with nutrition. In the following step, daily food guide, and personalized recipes will offer to you. Our website, designed by ByteConnect, helps you eat right at home.</p>
+                    <div class="testimonial-author">From - ByteConnect</div>
+                </div> <!-- end of text-container -->
+            </div> <!-- end of col -->
+            <div class="col-lg-7">
+                <div class="image-container">
+                    <img class="img-fluid" src="images/intro.jpg" alt="alternative">
+                </div> <!-- end of image-container -->
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+    </div> <!-- end of container -->
+</div> <!-- end of basic-1 -->
+<!-- end of intro -->
+
+
+<!-- Copyright -->
+<div class="copyright">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <p class="p-small"><!--Copyright © 2020 <a href="https://inovatik.com">Template by Inovatik</a>--></p>
             </div>
         </div>
     </div>
-</template>
-<script src="js/login.js"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/vue.min.js"></script>
+</div>
+<!--end of copyright -->
+
+
+<!-- Scripts -->
+<script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+<script src="js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
+<script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
+<script src="js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
+<script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
+<script src="js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
+<script src="js/morphext.min.js"></script> <!-- Morphtext rotating text in the header -->
+<script src="js/isotope.pkgd.min.js"></script> <!-- Isotope for filter -->
+<script src="js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
+<script src="js/scripts.js"></script> <!-- Custom scripts -->
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+<script src="js/valid.password.js"></script>
 <script>
-    $(function () {
-        new Vue({
-            el: '#container',
-            template: '#template1',
-            data: {
-                video: '',
-                screenWidth: 0,
-                screenHeight: 0,
-                isUp: false,
-                ratio: 800 / 450,
-            },
-            computed: {
-                videoStyle() {
-                    let videoWidth = 0;
-                    let videoHeight = 0;
-                    videoWidth = this.screenWidth;
-                    videoHeight = videoWidth / this.ratio;
-                    if (videoHeight < this.screenHeight) {
-                        videoHeight = this.screenHeight;
-                        videoWidth = videoHeight * this.ratio;
-                    }
-                    return 'width: ' + videoWidth + 'px;' + 'height: ' + videoHeight + 'px;';
-                }
-            },
-            mounted() {
-                this.init();
-                setTimeout(() => {
-                    this.isUp = true;
-                }, 300000);
-            },
-            methods: {
-                init() {
-                    this.screenWidth = document.documentElement.clientWidth;
-                    this.screenHeight = document.documentElement.clientHeight;
-                    this.video = 'video/video.mp4'
-                },
-                changeUp() {
-                    this.isUp = !this.isUp;
-                }
-            }
-        });
+    $("#scroll-down").on('click', function () {
+        var height = $(window).scrollTop();
+        $('html , body').animate({scrollTop: $('#intro').offset().top}, 800);//点击按钮向下到指定位置，时间为800毫秒
     });
 </script>
+
 </body>
 </html>
